# nvim_mcp_rust

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: ADVANCED.md  DEVELOP.md
lua/nvim-mcp/: bridge.lua  commands.lua  config.lua  context_sync.lua  init.lua  provider.lua  session.lua  store.lua  util.lua
lua/nvim-mcp/ui/: init.lua  picker.lua
plugin/: nvim-mcp.vim
src/: error.rs  handler.rs  main.rs  markdown.rs
src/ai/: claude.rs  gemini.rs  lmstudio.rs  mod.rs  models.rs  ollama.rs  openai.rs  provider.rs
src/ipc/: loop.rs  message.rs  mod.rs
src/mcp/: client.rs  manager.rs  mod.rs  types.rs
src/storage/: config.rs  history.rs  mod.rs
src/transport/: mod.rs  sse.rs  stdio.rs
