[package]
name         = "nvim-mcp"
version      = "0.1.2"
edition      = "2024"
rust-version = "1.94"
description  = "Neovim AI assistant powered by Rust - Claude, OpenAI, Gemini, Ollama, LM Studio support"
license      = "MIT"

[[bin]]
name = "nvim-mcp"
path = "src/main.rs"

[dependencies]
# Async
tokio          = { version = "1",    features = ["full"] }
futures        = "0.3"
async-stream   = "0.3"
tokio-stream   = "0.1"
futures-util   = "0.3"

# Serialization
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"

# HTTP — rustls only, no OpenSSL
reqwest        = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Error handling
anyhow         = "1"
thiserror      = "2"

# Logging — stderr only, never stdout
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# Config & storage
directories = "5"

# Markdown parsing
pulldown-cmark = "0.12"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
